# lightning-p2p

./: .env.example  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.json  DESIGN.md  LICENSE  NOTICE  PRIVACY.md  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  agents.md  eslint.config.js  index.html  netlify.toml  package.json  pnpm-lock.yaml  release-notes-v0.4.6.md  release-notes-v0.5.0.md  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: android_report.yml  benchmark_report.yml  bug_report.md  bug_report.yml  config.yml  download_install_issue.yml  feature_request.md  security_report.yml  windows_download_warning.yml
.github/workflows/: ci.yml  winget.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CODE_QUALITY_NOTES.md  GROWTH_PLAYBOOK.md  PRESS_KIT.md  README.md  ROADMAP.md  ROADMAP_v0.5_to_v0.7.md  SECURITY_NOTES.md  android-alpha.md  android-artifact-verification.md  android-release-runbook.md  android-trust.md  benchmark-report-template.md  browser-receiver-spike.md  download-trust.md  ios-testflight.md  launch-checklist.md  launch-growth.md  mobile-rfc.md  online-handoff.md  proximity.md  release-checklist.md  release-evidence.md  release-operations.md  security-model.md  seo-checklist.md  store-readiness.md  v0.4.5-proof-release.md  windows-installer-paths.md
docs/launch/: PLAYBOOK.md  README.md  hackernews-show-hn.md  hardware-dependent-assets.md  linkedin.md  producthunt.md  reddit-android.md  reddit-opensource.md  reddit-rust-v0.8-rehearsal.md  reddit-rust.md  reddit-selfhosted.md  twitter-thread.md
docs/reports/: README.md  automated-local-benchmarks.md
docs/reports/raw/audit-v0.5.1/: 1779825217-local.csv  1779825217-local.json
docs/reports/raw/audit-v0.5.1/baseline-v2/: 1779826719-local.csv  latest.json
docs/reports/raw/audit-v0.5.1/mode-sweep/battery_safe/: 1779831562-local.csv  1779831562-local.json
docs/reports/raw/audit-v0.5.1/mode-sweep/extreme/: 1779831541-local.csv  latest.json
docs/reports/raw/audit-v0.5.1/mode-sweep/fast/: 1779831531-local.csv  1779831531-local.json
docs/reports/raw/audit-v0.5.1/mode-sweep/lan_beast/: 1779831551-local.csv  latest.json
docs/reports/raw/audit-v0.5.1/mode-sweep/standard/: 1779831521-local.json  latest.csv
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p128/: 1779827343-local.csv  1779827343-local.json
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p16/: 1779827316-local.json  latest.csv
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p200/: latest.csv  latest.json
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p32/: 1779827325-local.csv  1779827325-local.json
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p4/: 1779827308-local.csv  latest.json
docs/reports/raw/audit-v0.5.1/sweep-parallelism/p64/: latest.csv  latest.json
docs/reports/raw/local/: latest.csv  latest.json
public/: 404.html  llms-full.txt  llms.txt  manifest.webmanifest
public/webrx/: web_receiver.js
scripts/: android-launch-smoke.sh  android-physical-acceptance.ps1  benchmark-matrix.ps1  build-web-metadata.mjs  build-web-receiver.sh  check-release-state.mjs  e2e-browser-send.mjs  render-app-icon.ps1  render-installer-art.ps1  run-local-benchmark.ps1  run-local-benchmark.sh  run-tauri.mjs  set-android-secrets.ps1  sync-benchmark-summary.mjs  velopack-post-install.ps1  velopack-post-uninstall.ps1  verify-android-artifact.ps1  verify-android-artifact.sh  verify-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.release.conf.json  tauri.windows.conf.json
src-tauri/benches/: transfer_bench.rs
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  proximity.rs
src-tauri/src/commands/: diagnostics.rs  mobile.rs  mobile_context.rs  mod.rs  nearby.rs  peer.rs  platform.rs  settings.rs  share.rs  transfer.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/node/: discovery.rs  endpoint.rs  mod.rs  nearby.rs  nearby_offer.rs  nearby_protocol.rs  status.rs  supervisor.rs
src-tauri/src/proximity/: ble.rs
src-tauri/src/storage/: db.rs  history.rs  mod.rs  peers.rs  settings.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/src/transfer/: destination.rs  export.rs  metrics.rs  mime.rs  mod.rs  mode.rs  progress.rs  queue.rs  receiver.rs  sender.rs  swarm.rs  ticket.rs
src-tauri/tests/: transfer_test.rs
src-tauri/windows/: English.nsh  installer.nsi  sign-windows.ps1
src/components/: AppOverview.tsx  BrowserReceivePanel.tsx  DeviceCard.tsx  DevicesView.tsx  EmptyState.tsx  FirstRunOverlay.tsx  HistoryView.tsx  HomeView.tsx  InlineAlert.tsx  MobileBottomSheet.tsx  MobileTabBar.tsx  NearbyShareCard.tsx  OfferPrompt.tsx  ReceiveHandoffPage.tsx  ReceiveView.tsx  SendPage.tsx  SendView.tsx  SettingsView.tsx  Sidebar.tsx  TransferCard.tsx  WebLandingPage.tsx  WindowChrome.tsx
src/components/landing/: ComparisonTable.tsx  HowItWorks.tsx
src/content/: local-benchmark-summary.json  release-manifest.json  web-pages.json
src/hooks/: useTransfer.ts
src/lib/: appErrors.test.ts  appErrors.ts  format.ts  frontendDiagnostics.ts  shareLinks.ts  tauri.ts  transferSummary.test.ts  transferSummary.ts  webReceiver.ts  webrxVersion.ts
src/stores/: incomingOfferStore.ts  nearbyDeviceStore.ts  nearbyDiagnosticStore.ts  nearbyShareStore.ts  transferEventMapping.test.ts  transferEventMapping.ts  transferSelectors.ts  transferStore.ts
web-receiver/: Cargo.toml  README.md
web-receiver/src/: lib.rs  qr.rs  sender.rs  ticket.rs  wasm.rs
web-receiver/tests/: loopback.rs
