[package]
name = "lightning-p2p"
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
default-run = "lightning-p2p"
description = "Lightning P2P - direct peer-to-peer file sharing for Windows and Android"
license = "Apache-2.0"

[lib]
name = "lightning_p2p_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# iroh P2P networking
iroh = { version = "0.35", features = ["discovery-local-network"] }
iroh-blobs = { version = "0.35", features = ["rpc"] }
# Same quinn fork iroh 0.35 uses internally; pulled in directly only for the
# congestion controller configs (BbrConfig/CubicConfig) that iroh does not
# re-export. Must stay version-locked to iroh's own quinn dependency.
iroh-quinn-proto = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
n0-future = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Local storage
sled = "0.34"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secure key storage
keyring = "4"

# Utilities
dirs = "6"
hex = "0.4"
mime_guess = "2"
qrcode = "0.14"
rand = "0.8"
sha2 = "0.10"
socket2 = "0.6"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-barcode-scanner = "2.4.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Devices_Bluetooth",
  "Devices_Bluetooth_Advertisement",
  "Foundation",
  "Storage_Streams",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cli = ["clap"]

[[bin]]
name = "benchmark-local"
path = "src/bin/benchmark_local.rs"

[[bench]]
name = "transfer_bench"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
